Fixes classes and reimplemented Player movement - Player class for position and dimensions - Controller class for player input (changes Player class'es position on KeyPress) - Game class for SpriteStacks and Player class
main thinned out

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ SFML-2.5.1/
 SFML_Test/Project1/Project1/Release/
 SFML_Test/Project1/Project1/Debug/
 SFML_Test/Project1/.vs/
+SFML_Test/Project1/Ressources/img/spriteSet.png
